--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,9 +22,19 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Celebrities</a>
     <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="/celebrities/">All celebrities</a></li>
       <li><a class="dropdown-item" href="/celebrities/create">Create</a></li>
     </ul>
   </li>
+
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Movies</a>
+    <ul class="dropdown-menu">
+       <li><a class="dropdown-item" href="/movies">All movies</a></li>
+      <li><a class="dropdown-item" href="/movies/create">Create movie</a></li>
+    </ul>
+  </li>
+
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
   </li>
