--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -1,14 +1,8 @@
-<div>
 
-    <h2>Movies</h2>
+    <h2>All Movies</h2>
+
+    <div class="list-group">
     {{#each this.allMovies}}
-        <li>
-            {{this.title}}
-        </li>
+        <a href="/movies/{{this._id}}" class="list-group-item list-group-item-action">{{this.title}}</a>
     {{/each}}
-
-
-
-
-
 </div>
