--- a/views/movies/movie-details.hbs
+++ b/views/movies/movie-details.hbs
@@ -12,7 +12,7 @@
     <p>Plot: {{this.movieDetails.plot}}</p>
 
     <div class="d-flex justify-content-center gap">
-<a href="/movies/{{this.movieDetails._id}}/update">
+<a href="/movies/{{this.movieDetails._id}}/edit">
     <button class="btn btn-warning">Update movie</button></a></p>
 
     <br>
