--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,13 @@
-<h1>{{title}}</h1>
+<h1>Celebrities Data Base</h1>
 
-<a href="/celebrities/create">Create new</a>
-<a href="/celebrities">List of Spanish Celebrities</a>
+<ul>
+<li><a href="/celebrities/create">Create new celebrity</a></li>
+<li><a href="/celebrities">List of Spanish Celebrities</a></li>
+</ul>
+
+<br>
+
+<ul>
+<li><a href="/movies/create">Create new movie</a></li>
+<li><a href="/movies">List of movies</a></li>
+</ul>
